# hypnose-analysis

./: .gitattributes  .gitignore  .gitmodules  README.md  behavior_visualization.ipynb  environment.yml  metrics_analysis.ipynb  pyproject.toml  requirements.txt  run_batch_analysis.sh  setup.py  sleap_analysis.ipynb  trial_classification.ipynb
configs/: README.md  data_locations.yml
data/: rawdata
docs/: restructure_2_plan.md
hypnose.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
notebook/: multiple_sessions.ipynb  performance_progress.ipynb  process-session.ipynb  process_session.ipynb  single-session-engagementtime.ipynb  single-session-stage2to8.ipynb  single_session.ipynb  single_session_engagementtime.ipynb  utils.py
notebooks/: behavior_visualization.ipynb  behavioral_metrics.py  classification_utils.py  events-visualisation.ipynb  hpc_trial_analysis.py  hypnose_testing.ipynb  metrics_analysis.ipynb  metrics_utils.py  movement_analysis.ipynb  multiple-sessions.ipynb  pred_seq.ipynb  process-session.ipynb  separate-analysis-branch-sandbox.ipynb  sing_rew_visualization.ipynb  single-session-engagementtime.ipynb  single-session-stage1.ipynb  single-session.ipynb  trial_classification.ipynb  utils.py
scripts/: README.md  batch_process.py  run_metrics_analysis.py  run_trial_classification.py  set_data_location.py
src/: __init__.py  analysis.py  analysis_freerun.py  decision-analyser-multiple-sessions.py  detect_stages.py  plot-rewards-multiple-subjects.py  plot-rewards-single-subject.py  reward-analyser-single-session.py  reward-analyser-stage1.py  utils.py  (+2 more)
(+524 files in other folders)
